<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center">

    <TextView
            android:id="@+id/tv_main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_main_menu"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_marginBottom="40dp" />

    <Button
            android:id="@+id/btn_main_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:padding="12dp"
            android:text="@string/btn_text_create" />

    <Button
            android:id="@+id/btn_main_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:padding="12dp"
            android:text="@string/btn_text_view" />

    <Button
            android:id="@+id/btn_main_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:padding="12dp"
            android:text="@string/btn_text_update" />

    <Button
            android:id="@+id/btn_main_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/btn_text_delete" />

</LinearLayout>